2019-07-01  Wilco Dijkstra  <wdijkstr@arm.com>
	    John David Anglin  <danglin@gcc.gnu.org>

	PR target/90963
	* config/pa/pa.md (builtin_longjmp): Restore hard_frame_pointer_rtx
	using saved frame pointer.

2019-07-01  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/64242
	* config/sparc/sparc.md (nonlocal_goto): Restore frame pointer last.
	Add frame clobber and schedule blockage.

2019-07-01  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/invoke.texi (Link Options): Further editorial changes to
	-flinker-output docs.

2019-07-01  Segher Boessenkool  <segher@kernel.crashing.org>

	* config/rs6000/rs6000.c (rs6000_force_indexed_or_indirect_mem):
	Load both operands of a PLUS into registers separately.

2019-07-01  Andreas Krebbel  <krebbel@linux.ibm.com>

	* config/s390/vector.md: Fix shift count operand printing.

2019-07-01  Richard Sandiford  <richard.sandiford@arm.com>

	* ira-lives.c (process_bb_node_lives): Use ira_setup_alts.

2019-07-01  Richard Sandiford  <richard.sandiford@arm.com>

	* ira.c (ira_get_dup_out_num): Don't punt for earlyclobbers.
	Use recog_data to test for an output operand.

2019-07-01  Richard Sandiford  <richard.sandiford@arm.com>

	* ira.c (ira_setup_alts): If any valid alternatives have zero cost,
	exclude any others that are disparaged or that are bound to need
	a reload or spill.
	(ira_get_dup_out_num): Expand comment.

2019-07-01  Richard Sandiford  <richard.sandiford@arm.com>

	* ira.c (ira_setup_alts): Use preprocess_constraints to get the
	constraint string for each operand/alternative combo.  Only handle
	'%' at the start of constraint strings, and look for it outside
	the main loop.

2019-07-01  Richard Sandiford  <richard.sandiford@arm.com>

	* ira-int.h (ira_setup_alts, ira_get_dup_out_num): Use
	alternative_mask instead of HARD_REG_SET to represent a
	bitmask of alternatives.
	* ira.c (ira_setup_alts, ira_get_dup_out_num): Likewise.
	* ira-conflicts.c (add_insn_allocno_copies): Likewise.
